# django_react

./: pyproject.toml  requirements.txt
backend/: requirements.txt
backend/.choreo/: component.yaml
backend/api/: views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py
frontend/: package-lock.json
frontend/src/: App.jsx  api.js
frontend/src/components/: Form.jsx  LoadingIndicator.jsx  Note.jsx  ProtectedRoute.jsx
frontend/src/pages/: Home.jsx  NotFound.jsx
