[tool.poetry]
name = "django-react"
version = "0.1.0"
description = ""
authors = ["AtliAsmunds <atliasmunds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
django = "^4.2"
django-cors-headers = "^4.6.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
pyjwt = "^2.10.0"
pytz = "^2024.2"
sqlparse = "^0.5.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
sshtunnel = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
